bynkc/tests/fixtures/positive/184_adapter_consumes_adapter/src/logging.binding.ts
import type { Log } from "./logging.js";

export class ConsoleLog implements Log {
  async info(msg: string): Promise<void> {
    console.log(msg);
  }
}
