bynkc/tests/fixtures/negative/144_requires_unpinned_dep/src/badpkg.binding.ts
import type { C } from "./badpkg.js";
export class Impl implements C {
  async f(): Promise<number> { return 0; }
}
